# d7print

./: Format.md  README.md  pyproject.toml
d7print/: __init__.py  display.py  grbl.py  hw_manager.py  image_mapper.py  preprocessor.py  ruleset.py  utils.py
d7print/static/js/: d7.js
d7print/templates/: home.htm
system/: boot.cmd  boot.scr  d7print.service  eth0.network  grbl.cfg  journald.conf  mkinitcpio.conf  nanopi_m1_nofb_defconfig  sun8i-h3-nanopi-m1.dtb  sun8i-h3-nanopi-m1.dts  wlan0.network  wpa_supplicant-wlan0.conf
