[project]
name = "d7-python"
version = "0.1.0"
description = ""
authors = [{email = "Denis Vygovskiy <dshaded@gmail.com>"}]
readme = "README.md"
packages = [{include = "d7print"}]
requires-python = ">=3.11"
dependencies = [
    "Flask (>=3.0.0,<4.0.0)",
    "pillow (>=11.0.0,<12.0.0)",
    "pyserial (>=3.0,<4.0)",
    "numpy (>=2.0,<3.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
